Update app with pre-populated teams and share link features

--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -253,7 +253,22 @@
 
     function App() {
       const [phase, setPhase] = useState('import');
-      const [importText, setImportText] = useState('');
+      const [importText, setImportText] = useState(`Oscar Serra / Sanil Jagtiani
+Jack Hared / Preston Gordon
+Ted Holway / Alex Szczepkowski
+Matvey Radionov / Matt Meadows
+Lukas Choi / William Hayes
+Jordan Denish / Alex Tong
+Conor Landrigan / Geoff Watson
+Cody Sadreameli / Dan Wach
+Jeff Comer / Kenoa Tio
+Matthew Matro / Zach Bowe
+Bruno Casino Remondo / Drew Von Bargen
+Austin Gow / Peter Weaver
+Alex Boory / Ronald Marchese
+Austin Keefer / Mason McCabe
+Shashank Kamdar / Zachary Lessner
+Matthew Chen / Johny Mario`);
       const [teams, setTeams] = useState(Array.from({ length: 16 }, () => ({ p1Name: '', p1Dupr: '', p2Name: '', p2Dupr: '' })));
       const [seedingScores, setSeedingScores] = useState({});
       const [bracketScores, setBracketScores] = useState({});
