--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -8,6 +8,7 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/pako@2.1.0/dist/pako.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
@@ -289,7 +290,21 @@ Matthew Chen / Johny Mario`);
         const sharedState = params.get('s');
         if (sharedState) {
           try {
-            const decoded = JSON.parse(atob(sharedState));
+            let decoded;
+            // Try compressed format first (URL-safe base64 + pako)
+            try {
+              // Restore URL-safe base64: - to +, _ to /, add padding
+              let base64 = sharedState.replace(/-/g, '+').replace(/_/g, '/');
+              while (base64.length % 4) base64 += '=';
+              const binary = atob(base64);
+              const bytes = new Uint8Array(binary.length);
+              for (let i = 0; i < binary.length; i++) bytes[i] = binary.charCodeAt(i);
+              const decompressed = pako.inflate(bytes, { to: 'string' });
+              decoded = JSON.parse(decompressed);
+            } catch (compressError) {
+              // Fall back to old uncompressed format
+              decoded = JSON.parse(atob(sharedState));
+            }
             if (decoded.teams) setTeams(decoded.teams);
             if (decoded.seedingScores) setSeedingScores(decoded.seedingScores);
             if (decoded.bracketScores) setBracketScores(decoded.bracketScores);
@@ -318,8 +333,13 @@ Matthew Chen / Johny Mario`);
           onCourt,
           phase
         };
-        const encoded = btoa(JSON.stringify(state));
-        const url = `${window.location.origin}${window.location.pathname}?s=${encoded}`;
+        // Compress with pako, then URL-safe base64
+        const jsonStr = JSON.stringify(state);
+        const compressed = pako.deflate(jsonStr);
+        const base64 = btoa(String.fromCharCode.apply(null, compressed));
+        // Make URL-safe: replace + with -, / with _, remove padding =
+        const urlSafe = base64.replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
+        const url = `${window.location.origin}${window.location.pathname}?s=${urlSafe}`;
         navigator.clipboard.writeText(url).then(() => {
           setLinkCopied(true);
           setTimeout(() => setLinkCopied(false), 2000);
