--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -271,6 +271,7 @@ Austin Keefer / Mason McCabe
 Shashank Kamdar / Zachary Lessner
 Matthew Chen / Johny Mario`);
       const [teamCount, setTeamCount] = useState(16);
+      const [winnersCount, setWinnersCount] = useState(8); // How many teams go to winners bracket
       const [teams, setTeams] = useState(Array.from({ length: 16 }, () => ({ p1Name: '', p1Dupr: '', p2Name: '', p2Dupr: '' })));
       const [seedingScores, setSeedingScores] = useState({});
       const [bracketScores, setBracketScores] = useState({});
@@ -287,6 +288,9 @@ Matthew Chen / Johny Mario`);
       const [dragOverIndex, setDragOverIndex] = useState(null);
       const [spectatorMode, setSpectatorMode] = useState(false);
       const [linkCopied, setLinkCopied] = useState(false);
+
+      // Default winners count based on team count
+      const defaultWinnersCount = { 12: 12, 13: 8, 14: 8, 15: 8, 16: 8 };
 
       // Payouts based on team count (prize pool only, not including organizer fee)
       const payouts = {
@@ -320,6 +324,7 @@ Matthew Chen / Johny Mario`);
               decoded = JSON.parse(atob(sharedState));
             }
             if (decoded.teamCount) setTeamCount(decoded.teamCount);
+            if (decoded.winnersCount) setWinnersCount(decoded.winnersCount);
             if (decoded.teams) setTeams(decoded.teams);
             if (decoded.seedingScores) setSeedingScores(decoded.seedingScores);
             if (decoded.bracketScores) setBracketScores(decoded.bracketScores);
@@ -341,6 +346,7 @@ Matthew Chen / Johny Mario`);
       const shareLink = useCallback(() => {
         const state = {
           teamCount,
+          winnersCount,
           teams,
           seedingScores,
           bracketScores,
@@ -364,7 +370,7 @@ Matthew Chen / Johny Mario`);
           setLinkCopied(true);
           setTimeout(() => setLinkCopied(false), 2000);
         });
-      }, [teamCount, teams, seedingScores, bracketScores, bracketOverrides, game1Matchups, game2Matchups, game3Matchups, pools, matchupsGenerated, onCourt, phase]);
+      }, [teamCount, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, game1Matchups, game2Matchups, game3Matchups, pools, matchupsGenerated, onCourt, phase]);
 
       const handleDragStart = useCallback((e, index) => {
         setDragIndex(index);
@@ -422,6 +428,7 @@ Matthew Chen / Johny Mario`);
 
         if (parsed.length >= 12 && parsed.length <= 16) {
           setTeamCount(parsed.length);
+          setWinnersCount(defaultWinnersCount[parsed.length] || 8);
           setTeams(parsed);
           setPhase('setup');
         } else {
@@ -587,8 +594,7 @@ Matthew Chen / Johny Mario`);
       const bracketTeams = useMemo(() => {
         if (standings.length < teamCount) return { winners: [], losers: [], swaps: [] };
 
-        // Split into winners and losers
-        const winnersCount = Math.ceil(teamCount / 2);
+        // Split into winners and losers based on configured winnersCount
         const losersCount = teamCount - winnersCount;
         let winners = standings.slice(0, winnersCount);
         let losers = standings.slice(winnersCount);
@@ -645,7 +651,7 @@ Matthew Chen / Johny Mario`);
         setBracketSwaps(swaps);
 
         return { winners, losers, swaps };
-      }, [standings, teamCount]);
+      }, [standings, teamCount, winnersCount]);
 
       const generateFakeSeedingScores = useCallback(() => {
         const fakeScores = {};
@@ -1047,7 +1053,6 @@ Matthew Chen / Johny Mario`);
 
         results += `\nROUND ROBIN STANDINGS\n`;
         results += `------------------------------\n`;
-        const winnersCount = Math.ceil(teamCount / 2);
         standings.forEach((t, i) => {
           const bracket = i < winnersCount ? '→ Winners' : '→ Losers';
           results += `${i + 1}. ${t.name} ${t.wins}-${t.losses} (${t.pf - t.pa >= 0 ? '+' : ''}${t.pf - t.pa}) ${bracket}\n`;
@@ -1230,6 +1235,34 @@ Matthew Chen / Johny Mario`);
               </div>
               {teamsValid && (
                 <div className="mt-4">
+                  <div className="bg-gray-800 rounded p-3 mb-3">
+                    <div className="flex items-center justify-between">
+                      <span className="text-sm">Winners Bracket Size:</span>
+                      <div className="flex items-center gap-2">
+                        <select
+                          value={winnersCount}
+                          onChange={(e) => setWinnersCount(parseInt(e.target.value))}
+                          className="bg-gray-700 rounded px-2 py-1 text-sm"
+                        >
+                          {Array.from({ length: teamCount - 3 }, (_, i) => i + 4).map(n => (
+                            <option key={n} value={n}>{n} teams</option>
+                          ))}
+                          <option value={teamCount}>{teamCount} (all)</option>
+                        </select>
+                        <button
+                          onClick={() => setWinnersCount(defaultWinnersCount[teamCount] || 8)}
+                          className="text-xs text-gray-400 hover:text-white"
+                        >
+                          Reset
+                        </button>
+                      </div>
+                    </div>
+                    <div className="text-xs text-gray-500 mt-1">
+                      {winnersCount === teamCount
+                        ? 'All teams start in Winners Bracket (losers drop to Losers Bracket)'
+                        : `Top ${winnersCount} → Winners, Bottom ${teamCount - winnersCount} → Losers`}
+                    </div>
+                  </div>
                   <button onClick={generateRandomMatchups} className="w-full bg-yellow-600 hover:bg-yellow-500 py-2 rounded font-semibold mb-2">
                     🎲 Randomize Matchups
                   </button>
@@ -1341,7 +1374,6 @@ Matthew Chen / Johny Mario`);
                   <span className="w-12 text-right">PD</span>
                 </div>
                 {standings.map((t, i) => {
-                  const winnersCount = Math.ceil(teamCount / 2);
                   const isWinners = i < winnersCount;
                   const poolColors = ['text-yellow-400', 'text-blue-400', 'text-green-400', 'text-red-400'];
                   return (
@@ -1364,7 +1396,9 @@ Matthew Chen / Johny Mario`);
                 })}
               </div>
               <div className="mt-2 text-xs text-gray-500 text-center">
-                Top {Math.ceil(teamCount / 2)} → Winners Bracket | Bottom {Math.floor(teamCount / 2)} → Losers Bracket
+                {winnersCount === teamCount
+                  ? `All ${teamCount} teams → Winners Bracket`
+                  : `Top ${winnersCount} → Winners Bracket | Bottom ${teamCount - winnersCount} → Losers Bracket`}
               </div>
               {allSeedingComplete && (
                 <button onClick={() => setPhase('bracket')} className="w-full mt-4 bg-green-600 py-2 rounded font-semibold">
