Hide configuration controls in spectator mode for cleaner view

--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -1233,7 +1233,7 @@ Matthew Chen / Johny Mario`);
                   ))}
                 </div>
               </div>
-              {teamsValid && (
+              {teamsValid && !spectatorMode && (
                 <div className="mt-4">
                   <div className="bg-gray-800 rounded p-3 mb-3">
                     <div className="flex items-center justify-between">
