--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -271,6 +271,7 @@ Austin Keefer / Mason McCabe
 Shashank Kamdar / Zachary Lessner
 Matthew Chen / Johny Mario`);
       const [teamCount, setTeamCount] = useState(16);
+      const [rrGames, setRrGames] = useState(3); // 2 or 3 RR games
       const [winnersCount, setWinnersCount] = useState(8); // How many teams go to winners bracket
       const [teams, setTeams] = useState(Array.from({ length: 16 }, () => ({ p1Name: '', p1Dupr: '', p2Name: '', p2Dupr: '' })));
       const [seedingScores, setSeedingScores] = useState({});
@@ -324,6 +325,7 @@ Matthew Chen / Johny Mario`);
               decoded = JSON.parse(atob(sharedState));
             }
             if (decoded.teamCount) setTeamCount(decoded.teamCount);
+            if (decoded.rrGames) setRrGames(decoded.rrGames);
             if (decoded.winnersCount) setWinnersCount(decoded.winnersCount);
             if (decoded.teams) setTeams(decoded.teams);
             if (decoded.seedingScores) setSeedingScores(decoded.seedingScores);
@@ -346,6 +348,7 @@ Matthew Chen / Johny Mario`);
       const shareLink = useCallback(() => {
         const state = {
           teamCount,
+          rrGames,
           winnersCount,
           teams,
           seedingScores,
@@ -370,7 +373,7 @@ Matthew Chen / Johny Mario`);
           setLinkCopied(true);
           setTimeout(() => setLinkCopied(false), 2000);
         });
-      }, [teamCount, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, game1Matchups, game2Matchups, game3Matchups, pools, matchupsGenerated, onCourt, phase]);
+      }, [teamCount, rrGames, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, game1Matchups, game2Matchups, game3Matchups, pools, matchupsGenerated, onCourt, phase]);
 
       const handleDragStart = useCallback((e, index) => {
         setDragIndex(index);
@@ -426,15 +429,14 @@ Matthew Chen / Johny Mario`);
           return null;
         }).filter(Boolean);
 
-        if (parsed.length >= 12 && parsed.length <= 16) {
-          setTeamCount(parsed.length);
-          setWinnersCount(defaultWinnersCount[parsed.length] || 8);
+        if (parsed.length !== teamCount) {
+          alert(`Expected ${teamCount} teams, found ${parsed.length}.`);
+        } else {
+          setWinnersCount(defaultWinnersCount[teamCount] || 8);
           setTeams(parsed);
           setPhase('setup');
-        } else {
-          alert(`Found ${parsed.length} teams, need 12-16 teams.`);
         }
-      }, [importText]);
+      }, [importText, teamCount]);
 
       const generateRandomMatchups = useCallback(() => {
         const shuffle = (arr) => {
@@ -446,10 +448,50 @@ Matthew Chen / Johny Mario`);
           return a;
         };
 
-        // Pools of 4 for 12 and 16 teams (snake draft)
-        if (teamCount === 12 || teamCount === 16) {
+        // 2 RR games: seed-balanced random for all team counts
+        if (rrGames === 2) {
+          const allTeams = Array.from({ length: teamCount }, (_, i) => i);
+
+          // Round 1: pair nearby seeds (0v1, 2v3, 4v5, etc.)
+          const g1 = [];
+          for (let i = 0; i < teamCount - 1; i += 2) {
+            g1.push({ t1: allTeams[i], t2: allTeams[i + 1] });
+          }
+
+          // Round 2: shift pairing (0v2, 1v3, 4v6, 5v7, etc.)
+          const g2 = [];
+          for (let i = 0; i < teamCount - 1; i += 2) {
+            const t1 = allTeams[i];
+            const t2 = allTeams[Math.min(i + 2, teamCount - 1)];
+            // Avoid same matchup as round 1
+            if (t2 === allTeams[i + 1]) {
+              g2.push({ t1, t2: allTeams[Math.min(i + 3, teamCount - 1)] });
+            } else {
+              g2.push({ t1, t2 });
+            }
+          }
+          // Better approach: interleave for round 2 (0v2, 1v3, 4v6, 5v7...)
+          const g2Better = [];
+          const used = new Set();
+          for (let i = 0; i < teamCount; i++) {
+            if (used.has(i)) continue;
+            const opponent = i + 2 < teamCount && !used.has(i + 2) ? i + 2 :
+                            (i + 1 < teamCount && !used.has(i + 1) ? i + 1 : null);
+            if (opponent !== null) {
+              g2Better.push({ t1: i, t2: opponent });
+              used.add(i);
+              used.add(opponent);
+            }
+          }
+
+          setGame1Matchups(shuffle(g1));
+          setGame2Matchups(shuffle(g2Better.length >= g1.length ? g2Better : g2));
+          setGame3Matchups([]);
+          setPools({});
+        }
+        // 3 RR games: pools for 12/16, random for 13-15
+        else if (teamCount === 12 || teamCount === 16) {
           const numPools = teamCount === 12 ? 3 : 4;
-          const poolSize = 4;
 
           // Snake draft: 1,2,3,4 then 8,7,6,5 then 9,10,11,12...
           const poolAssignments = {};
@@ -478,23 +520,20 @@ Matthew Chen / Johny Mario`);
           setGame3Matchups(shuffle(g3));
         } else {
           // 13, 14, 15 teams: 3 random RR games
-          // Each team plays 3 unique opponents, balanced as much as possible
           const allTeams = Array.from({ length: teamCount }, (_, i) => i);
           const opponents = {};
           allTeams.forEach(t => opponents[t] = []);
 
           const g1 = [], g2 = [], g3 = [];
 
-          // For each game round, pair up teams who haven't played each other
           for (let round = 0; round < 3; round++) {
             const available = [...allTeams];
             const roundMatches = [];
 
             while (available.length >= 2) {
               const t1 = available.shift();
-              // Find opponent t1 hasn't played yet
               let t2Idx = available.findIndex(t => !opponents[t1].includes(t));
-              if (t2Idx === -1) t2Idx = 0; // Fallback if no unique opponent
+              if (t2Idx === -1) t2Idx = 0;
               const t2 = available.splice(t2Idx, 1)[0];
 
               opponents[t1].push(t2);
@@ -507,13 +546,12 @@ Matthew Chen / Johny Mario`);
             else setGame3Matchups(shuffle(roundMatches));
           }
 
-          // No pools for random matchups
           setPools({});
         }
 
         setMatchupsGenerated(true);
         setSeedingScores({});
-      }, [teamCount]);
+      }, [teamCount, rrGames]);
 
       const teamData = useMemo(() => {
         return teams.map((t, i) => ({
@@ -954,6 +992,9 @@ Matthew Chen / Johny Mario`);
 
       const saveProgress = useCallback(() => {
         const data = {
+          teamCount,
+          rrGames,
+          winnersCount,
           teams,
           seedingScores,
           bracketScores,
@@ -961,6 +1002,8 @@ Matthew Chen / Johny Mario`);
           matchupsGenerated,
           game1Matchups,
           game2Matchups,
+          game3Matchups,
+          pools,
           onCourt
         };
         const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
@@ -970,7 +1013,7 @@ Matthew Chen / Johny Mario`);
         a.download = `moneyballs-${new Date().toISOString().split('T')[0]}.json`;
         a.click();
         URL.revokeObjectURL(url);
-      }, [teams, seedingScores, bracketScores, bracketOverrides, matchupsGenerated, game1Matchups, game2Matchups, onCourt]);
+      }, [teamCount, rrGames, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, matchupsGenerated, game1Matchups, game2Matchups, game3Matchups, pools, onCourt]);
 
       const loadProgress = useCallback((e) => {
         const file = e.target.files[0];
@@ -979,12 +1022,17 @@ Matthew Chen / Johny Mario`);
         reader.onload = (event) => {
           try {
             const data = JSON.parse(event.target.result);
+            if (data.teamCount) setTeamCount(data.teamCount);
+            if (data.rrGames) setRrGames(data.rrGames);
+            if (data.winnersCount) setWinnersCount(data.winnersCount);
             if (data.teams) setTeams(data.teams);
             if (data.seedingScores) setSeedingScores(data.seedingScores);
             if (data.bracketScores) setBracketScores(data.bracketScores);
             if (data.bracketOverrides) setBracketOverrides(data.bracketOverrides);
             if (data.game1Matchups) setGame1Matchups(data.game1Matchups);
             if (data.game2Matchups) setGame2Matchups(data.game2Matchups);
+            if (data.game3Matchups) setGame3Matchups(data.game3Matchups);
+            if (data.pools) setPools(data.pools);
             if (data.matchupsGenerated) setMatchupsGenerated(data.matchupsGenerated);
             if (data.onCourt) setOnCourt(data.onCourt);
             setPhase('setup');
@@ -1146,27 +1194,51 @@ Matthew Chen / Johny Mario`);
 
           {phase === 'import' && (
             <div className="max-w-2xl mx-auto">
-              <h2 className="text-xl font-semibold mb-4 text-center">Import Teams (Ranked 1-16)</h2>
+              <h2 className="text-xl font-semibold mb-4 text-center">Import Teams</h2>
+              <div className="flex justify-center items-center gap-4 mb-4">
+                <label className="text-sm text-gray-300">Teams:</label>
+                <select
+                  value={teamCount}
+                  onChange={(e) => {
+                    const newCount = parseInt(e.target.value);
+                    setTeamCount(newCount);
+                    setWinnersCount(defaultWinnersCount[newCount] || 8);
+                  }}
+                  className="bg-gray-700 border border-gray-600 rounded px-3 py-1 text-sm"
+                >
+                  {[12, 13, 14, 15, 16].map(n => (
+                    <option key={n} value={n}>{n}</option>
+                  ))}
+                </select>
+              </div>
               <textarea
                 className="w-full h-72 bg-gray-800 border border-gray-600 rounded p-3 text-sm font-mono"
-                placeholder="* Player 1 / Player 2&#10;* Player 3 / Player 4&#10;...etc (16 teams)"
+                placeholder="Player 1 / Player 2&#10;Player 3 / Player 4&#10;...etc"
                 value={importText}
-                onChange={(e) => setImportText(e.target.value)}
+                onChange={(e) => {
+                  setImportText(e.target.value);
+                  // Auto-detect team count from pasted text
+                  const lines = e.target.value.split('\n').filter(l => l.trim() && l.includes('/'));
+                  if (lines.length >= 12 && lines.length <= 16) {
+                    setTeamCount(lines.length);
+                    setWinnersCount(defaultWinnersCount[lines.length] || 8);
+                  }
+                }}
               />
               <button onClick={parseImportText} className="w-full mt-4 bg-orange-600 hover:bg-orange-500 py-2 rounded font-semibold">
-                Import Teams (12-16) →
+                Import {teamCount} Teams →
               </button>
             </div>
           )}
 
           {phase === 'setup' && (
             <div className="max-w-4xl mx-auto">
-              <h2 className="text-xl font-semibold mb-2 text-center">Teams & Pods</h2>
+              <h2 className="text-xl font-semibold mb-2 text-center">Teams ({teamCount})</h2>
               <p className="text-gray-400 text-xs text-center mb-4">Drag teams to reorder seeding</p>
               <div className="grid md:grid-cols-2 gap-4">
                 <div>
-                  <h3 className="text-yellow-400 font-semibold mb-2">Pod A (1-4)</h3>
-                  {[0, 1, 2, 3].map(i => (
+                  <h3 className="text-yellow-400 font-semibold mb-2">Seeds 1-4</h3>
+                  {[0, 1, 2, 3].filter(i => i < teamCount).map(i => (
                     <TeamInput
                       key={`team-${i}`}
                       index={i}
@@ -1181,8 +1253,8 @@ Matthew Chen / Johny Mario`);
                       isDragOver={dragOverIndex === i}
                     />
                   ))}
-                  <h3 className="text-blue-400 font-semibold mb-2 mt-4">Pod B (5-8)</h3>
-                  {[4, 5, 6, 7].map(i => (
+                  <h3 className="text-blue-400 font-semibold mb-2 mt-4">Seeds 5-8</h3>
+                  {[4, 5, 6, 7].filter(i => i < teamCount).map(i => (
                     <TeamInput
                       key={`team-${i}`}
                       index={i}
@@ -1199,8 +1271,8 @@ Matthew Chen / Johny Mario`);
                   ))}
                 </div>
                 <div>
-                  <h3 className="text-green-400 font-semibold mb-2">Pod C (9-12)</h3>
-                  {[8, 9, 10, 11].map(i => (
+                  <h3 className="text-green-400 font-semibold mb-2">Seeds 9-12</h3>
+                  {[8, 9, 10, 11].filter(i => i < teamCount).map(i => (
                     <TeamInput
                       key={`team-${i}`}
                       index={i}
@@ -1215,26 +1287,52 @@ Matthew Chen / Johny Mario`);
                       isDragOver={dragOverIndex === i}
                     />
                   ))}
-                  <h3 className="text-red-400 font-semibold mb-2 mt-4">Pod D (13-16)</h3>
-                  {[12, 13, 14, 15].map(i => (
-                    <TeamInput
-                      key={`team-${i}`}
-                      index={i}
-                      color="text-red-400"
-                      team={teams[i]}
-                      dupr={getTeamDupr(teams[i])}
-                      onChange={(field, value) => handleTeamChange(i, field, value)}
-                      onDragStart={handleDragStart}
-                      onDragOver={handleDragOver}
-                      onDrop={handleDrop}
-                      isDragging={dragIndex === i}
-                      isDragOver={dragOverIndex === i}
-                    />
-                  ))}
+                  {teamCount > 12 && (
+                    <>
+                      <h3 className="text-red-400 font-semibold mb-2 mt-4">Seeds 13-{teamCount}</h3>
+                      {[12, 13, 14, 15].filter(i => i < teamCount).map(i => (
+                        <TeamInput
+                          key={`team-${i}`}
+                          index={i}
+                          color="text-red-400"
+                          team={teams[i]}
+                          dupr={getTeamDupr(teams[i])}
+                          onChange={(field, value) => handleTeamChange(i, field, value)}
+                          onDragStart={handleDragStart}
+                          onDragOver={handleDragOver}
+                          onDrop={handleDrop}
+                          isDragging={dragIndex === i}
+                          isDragOver={dragOverIndex === i}
+                        />
+                      ))}
+                    </>
+                  )}
                 </div>
               </div>
               {teamsValid && !spectatorMode && (
                 <div className="mt-4">
+                  <div className="bg-gray-800 rounded p-3 mb-3">
+                    <div className="flex items-center justify-between">
+                      <span className="text-sm">RR Games:</span>
+                      <div className="flex items-center gap-2">
+                        <select
+                          value={rrGames}
+                          onChange={(e) => setRrGames(parseInt(e.target.value))}
+                          className="bg-gray-700 rounded px-2 py-1 text-sm"
+                        >
+                          <option value={2}>2 games (seed-balanced)</option>
+                          <option value={3}>3 games {teamCount === 12 || teamCount === 16 ? '(pools)' : '(random)'}</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div className="text-xs text-gray-500 mt-1">
+                      {rrGames === 2
+                        ? 'Each team plays 2 games vs similar seeds'
+                        : teamCount === 12 || teamCount === 16
+                          ? `${teamCount === 12 ? '3' : '4'} pools of 4, full round robin within pool`
+                          : 'Each team plays 3 random opponents'}
+                    </div>
+                  </div>
                   <div className="bg-gray-800 rounded p-3 mb-3">
                     <div className="flex items-center justify-between">
                       <span className="text-sm">Winners Bracket Size:</span>
@@ -1279,7 +1377,7 @@ Matthew Chen / Johny Mario`);
           {phase === 'roundrobin' && (
             <div className="max-w-6xl mx-auto">
               <div className="flex justify-between items-center mb-2">
-                <h2 className="text-xl font-semibold">Round Robin ({teamCount} teams, {Object.keys(pools).length > 0 ? `${teamCount === 12 ? '3' : '4'} pools` : '3 random games'})</h2>
+                <h2 className="text-xl font-semibold">Round Robin ({teamCount} teams, {rrGames} {Object.keys(pools).length > 0 ? 'pool' : 'seed-balanced'} games)</h2>
                 {!spectatorMode && <button onClick={generateFakeSeedingScores} className="text-xs bg-purple-700 hover:bg-purple-600 px-2 py-1 rounded">🎲 Test Scores</button>}
               </div>
               {!spectatorMode && <CourtStatus onCourtMatches={onCourtMatches} nextUpMatches={nextUpMatches} onToggleCourt={toggleOnCourt} />}
@@ -1302,7 +1400,7 @@ Matthew Chen / Johny Mario`);
                 </div>
               )}
 
-              <div className="grid md:grid-cols-3 gap-4">
+              <div className={`grid ${seedingMatches.game3.length > 0 ? 'md:grid-cols-3' : 'md:grid-cols-2'} gap-4`}>
                 <div>
                   <h3 className="text-blue-400 font-semibold mb-2 text-center">Game 1</h3>
                   <div className="space-y-2">
@@ -1335,22 +1433,24 @@ Matthew Chen / Johny Mario`);
                     ))}
                   </div>
                 </div>
-                <div>
-                  <h3 className="text-yellow-400 font-semibold mb-2 text-center">Game 3</h3>
-                  <div className="space-y-2">
-                    {seedingMatches.game3.map(m => (
-                      <SeedingMatch
-                        key={m.id}
-                        match={m}
-                        score={seedingScores[m.id] || {}}
-                        isOnCourt={onCourt[m.id]}
-                        onScoreChange={(field, value) => handleSeedingScore(m.id, field, value)}
-                        onToggleCourt={() => toggleOnCourt(m.id)}
-                        readOnly={spectatorMode}
-                      />
-                    ))}
+                {seedingMatches.game3.length > 0 && (
+                  <div>
+                    <h3 className="text-yellow-400 font-semibold mb-2 text-center">Game 3</h3>
+                    <div className="space-y-2">
+                      {seedingMatches.game3.map(m => (
+                        <SeedingMatch
+                          key={m.id}
+                          match={m}
+                          score={seedingScores[m.id] || {}}
+                          isOnCourt={onCourt[m.id]}
+                          onScoreChange={(field, value) => handleSeedingScore(m.id, field, value)}
+                          onToggleCourt={() => toggleOnCourt(m.id)}
+                          readOnly={spectatorMode}
+                        />
+                      ))}
+                    </div>
                   </div>
-                </div>
+                )}
               </div>
               {allSeedingComplete && (
                 <button onClick={() => setPhase('bracket')} className="w-full mt-4 bg-green-600 py-2 rounded font-semibold">
