Add configurable RR point target (11 or 15)

--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -272,6 +272,7 @@ Shashank Kamdar / Zachary Lessner
 Matthew Chen / Johny Mario`);
       const [teamCount, setTeamCount] = useState(16);
       const [rrGames, setRrGames] = useState(3); // 2 or 3 RR games
+      const [rrPointTarget, setRrPointTarget] = useState(11); // Games to 11 or 15
       const [winnersCount, setWinnersCount] = useState(8); // How many teams go to winners bracket
       const [teams, setTeams] = useState(Array.from({ length: 16 }, () => ({ p1Name: '', p1Dupr: '', p2Name: '', p2Dupr: '' })));
       const [seedingScores, setSeedingScores] = useState({});
@@ -326,6 +327,7 @@ Matthew Chen / Johny Mario`);
             }
             if (decoded.teamCount) setTeamCount(decoded.teamCount);
             if (decoded.rrGames) setRrGames(decoded.rrGames);
+            if (decoded.rrPointTarget) setRrPointTarget(decoded.rrPointTarget);
             if (decoded.winnersCount) setWinnersCount(decoded.winnersCount);
             if (decoded.teams) setTeams(decoded.teams);
             if (decoded.seedingScores) setSeedingScores(decoded.seedingScores);
@@ -349,6 +351,7 @@ Matthew Chen / Johny Mario`);
         const state = {
           teamCount,
           rrGames,
+          rrPointTarget,
           winnersCount,
           teams,
           seedingScores,
@@ -373,7 +376,7 @@ Matthew Chen / Johny Mario`);
           setLinkCopied(true);
           setTimeout(() => setLinkCopied(false), 2000);
         });
-      }, [teamCount, rrGames, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, game1Matchups, game2Matchups, game3Matchups, pools, matchupsGenerated, onCourt, phase]);
+      }, [teamCount, rrGames, rrPointTarget, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, game1Matchups, game2Matchups, game3Matchups, pools, matchupsGenerated, onCourt, phase]);
 
       const handleDragStart = useCallback((e, index) => {
         setDragIndex(index);
@@ -994,6 +997,7 @@ Matthew Chen / Johny Mario`);
         const data = {
           teamCount,
           rrGames,
+          rrPointTarget,
           winnersCount,
           teams,
           seedingScores,
@@ -1013,7 +1017,7 @@ Matthew Chen / Johny Mario`);
         a.download = `moneyballs-${new Date().toISOString().split('T')[0]}.json`;
         a.click();
         URL.revokeObjectURL(url);
-      }, [teamCount, rrGames, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, matchupsGenerated, game1Matchups, game2Matchups, game3Matchups, pools, onCourt]);
+      }, [teamCount, rrGames, rrPointTarget, winnersCount, teams, seedingScores, bracketScores, bracketOverrides, matchupsGenerated, game1Matchups, game2Matchups, game3Matchups, pools, onCourt]);
 
       const loadProgress = useCallback((e) => {
         const file = e.target.files[0];
@@ -1024,6 +1028,7 @@ Matthew Chen / Johny Mario`);
             const data = JSON.parse(event.target.result);
             if (data.teamCount) setTeamCount(data.teamCount);
             if (data.rrGames) setRrGames(data.rrGames);
+            if (data.rrPointTarget) setRrPointTarget(data.rrPointTarget);
             if (data.winnersCount) setWinnersCount(data.winnersCount);
             if (data.teams) setTeams(data.teams);
             if (data.seedingScores) setSeedingScores(data.seedingScores);
@@ -1323,14 +1328,23 @@ Matthew Chen / Johny Mario`);
                           <option value={2}>2 games (seed-balanced)</option>
                           <option value={3}>3 games {teamCount === 12 || teamCount === 16 ? '(pools)' : '(random)'}</option>
                         </select>
+                        <span className="text-gray-500">to</span>
+                        <select
+                          value={rrPointTarget}
+                          onChange={(e) => setRrPointTarget(parseInt(e.target.value))}
+                          className="bg-gray-700 rounded px-2 py-1 text-sm"
+                        >
+                          <option value={11}>11</option>
+                          <option value={15}>15</option>
+                        </select>
                       </div>
                     </div>
                     <div className="text-xs text-gray-500 mt-1">
                       {rrGames === 2
-                        ? 'Each team plays 2 games vs similar seeds'
+                        ? `Each team plays 2 games to ${rrPointTarget} vs similar seeds`
                         : teamCount === 12 || teamCount === 16
-                          ? `${teamCount === 12 ? '3' : '4'} pools of 4, full round robin within pool`
-                          : 'Each team plays 3 random opponents'}
+                          ? `${teamCount === 12 ? '3' : '4'} pools of 4, games to ${rrPointTarget}`
+                          : `Each team plays 3 random opponents to ${rrPointTarget}`}
                     </div>
                   </div>
                   <div className="bg-gray-800 rounded p-3 mb-3">
@@ -1377,7 +1391,7 @@ Matthew Chen / Johny Mario`);
           {phase === 'roundrobin' && (
             <div className="max-w-6xl mx-auto">
               <div className="flex justify-between items-center mb-2">
-                <h2 className="text-xl font-semibold">Round Robin ({teamCount} teams, {rrGames} {Object.keys(pools).length > 0 ? 'pool' : 'seed-balanced'} games)</h2>
+                <h2 className="text-xl font-semibold">Round Robin ({teamCount} teams, {rrGames} games to {rrPointTarget})</h2>
                 {!spectatorMode && <button onClick={generateFakeSeedingScores} className="text-xs bg-purple-700 hover:bg-purple-600 px-2 py-1 rounded">🎲 Test Scores</button>}
               </div>
               {!spectatorMode && <CourtStatus onCourtMatches={onCourtMatches} nextUpMatches={nextUpMatches} onToggleCourt={toggleOnCourt} />}
