Update default team list

--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -256,7 +256,6 @@
       const [phase, setPhase] = useState('import');
       const [importText, setImportText] = useState(`Oscar Serra / Sanil Jagtiani
 Jack Hared / Preston Gordon
-Ted Holway / Alex Szczepkowski
 Matvey Radionov / Matt Meadows
 Lukas Choi / William Hayes
 Jordan Denish / Alex Tong
@@ -266,9 +265,10 @@ Jeff Comer / Kenoa Tio
 Matthew Matro / Zach Bowe
 Bruno Casino Remondo / Drew Von Bargen
 Austin Gow / Peter Weaver
-Alex Boory / Ronald Marchese
 Austin Keefer / Mason McCabe
+Alex Boory / Ronald Marchese
 Shashank Kamdar / Zachary Lessner
+Kevin Herod / Jameson Mays
 Matthew Chen / Johny Mario`);
       const [teamCount, setTeamCount] = useState(16);
       const [rrGames, setRrGames] = useState(3); // 2 or 3 RR games
